--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.0",
     "@mui/x-date-pickers": "^5.0.0-beta.5",
+    "@syncfusion/ej2-react-calendars": "^20.2.43",
     "@tanstack/react-query": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
